# xmy_BYSJ

hard/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
hard/main/: CMakeLists.txt  delay_utils.c  delay_utils.h  idf_component.yml  spi_tft.c
hard/main/lvgl/: lvgl_port.c  ui.c
hard/main/ph/: ph_sensor.c  ph_sensor.h
hard/main/sensor/: sensor_service.c  sensor_service.h
hard/main/tds/: tds_sensor.c  tds_sensor.h
hard/main/temp/: temp_sensor.c  temp_sensor.h
hard/main/tft/: font8x16.c  font8x16.h  hz16x16.c  hz16x16.h  ili9341_simple.c  ili9341_simple.h  ili9341_text.c  ili9341_text.h
hard/main/touch/: touch_xpt2046.c  touch_xpt2046.h
hard/main/turbidity/: turbidity.c  turbidity.h
hard/main/ui/: ui_pages.c  ui_pages.h
hard/main/wifi/: wifi_manager.c  wifi_manager.h
wechat/: app.json  project.config.json  project.private.config.json
wechat/pages/device-data/: device-data.js  device-data.json  device-data.wxml  device-data.wxss
wechat/pages/devices/: devices.js  devices.wxml  devices.wxss
wechat/pages/index/: index.js  index.wxml  index.wxss
wechat/pages/metric/: metric.js  metric.json  metric.wxml  metric.wxss
wechat/pages/refresh-config/: refresh-config.js  refresh-config.json  refresh-config.wxml  refresh-config.wxss
wechat/pages/warning/: warning.js  warning.wxml  warning.wxss
wechat/utils/: onenet.js
